<resources>
    <string name="app_name">E-Library</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="uni_name">JSCST</string>
    <string name="spec_name">Software Engineering Year 2</string>
    <string name="year_name">Semester 4</string>
    <string name="sub_name">Subject:</string>
    <string name="sub_type">Type:</string>
    <string name="tbn_name">Search</string>
    <string name="downbtn">Download</string>
    <string name="OS">Operating Systems</string>
    <string name="DB">Database</string>
    <string name="CG">Computer Graphics</string>
    <string name="CN">Computer Networks</string>
    <string name="OOAD">Object Orinted Analysis and Design</string>
    <string name="OOP">Object Orinted Programming</string>
    <string name="SR">Software Engineering Requirements</string>
    <string name="Lec">Lectures</string>
    <string name="lab">Labs</string>
    <string name="exam">Exams</string>
    <string name="oth">Others</string>
    <string name="setting">About</string>
    <string name="upload">Upload</string>
    <string name="ok">Ok</string>
    <string name="empty">Nothing to display</string>
    <string name="delDialog">Do you want to delete</string>
    <string name="delBtn">Delete!</string>
    <string name="cancBtn">Cancel</string>
    <string name="delmsg">Deleting...</string>
    <string name="exit">Exit</string>
    <string name="update">Update</string>
    <string name="fileExist">File already exist</string>
    <string name="downloading">Downloading</string>
    <string name="dwncmp">Download completed</string>
    <string name="dwnfld">Download failed</string>
    <string name="httpdel">Delete ?</string>
    <string name="fetch">Fetching data...</string>
    <string name="duwtodel">Do you want to delete</string>
    <string name="httperr">Check your connection</string>
    <string name="dwncncl">Download canceled</string>
    <string name="checking">Checking...</string>

    <array name="subtype_array">
        <item><string name="lec">Lectures</string></item>
        <item><string name="labs">Labs</string></item>
        <item><string name="exams">Exams</string></item>
        <item><string name="others">Others</string></item>
    </array>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hintrename">Enter new name</string>
    <string name="change_username">Change username</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="cnct">S-N</string>
    <string name="opnfile">Do you want to open</string>
    <string name="showallnoti">Show A
        ll Notification</string>
    <string name="jstlastone">Just Last One</string>
    <string name="disablenoti">Disable</string>
    <string name="newnoti">New file has been uploaded:</string>
    <string name="uplodby">uploaded by</string>
    <string name="notititle">JSCST</string>
    <string name="shareit">Share it</string>
    <string name="exitmsg">If you exit you will not be able to receive any notification</string>
    <string name="uploading">Uploading...</string>
    <string name="sending">Sending</string>
    <string name="updatefound">New update found</string>
    <string name="noupdate">You have the latest version</string>
    <string name="updtcmp">Download complete do you want to install?</string>
    <string name="install">Install</string>
    <string name="latestversion">You have the latest version\nInstall?</string>
    <string name="err">Error</string>
    <string name="noapp">No application found to open this file</string>
    <string name="gotomar">Go to market</string>
    <string name="appismissing">Application missing</string>
    <string name="missingapp">Do you want to download the missing app</string>
    <string name="unknownexten">Unknown extension</string>
    <string name="delfailed">Delete failed</string>
    <string name="erroccur">Error occurded please ask Mohanad or Qasim</string>
    <string name="esexp">Do you want to install ES file explorer?</string>
    <string name="initiatedownload">Initiating download...</string>
    <string name="aboutthis">Developed by Qasim and Mohanad for the students of Software Engineering year (2015).</string>
    <string name="contactus">Contact us at:\n-vs.dev50@gmail.com\n-mohandgesm8420@gmail.com\nMobile: \n+249 925 426 241\n+249 969 970 512</string>
    <string name="whatsnew">What\'s new</string>
    <string name="choseuser">Choose username</string>
    <string name="userhint">username</string>
    <string name="noti">Notification</string>
    <string name="notidialog">In progress please wait...</string>
    <string name="welcometit">Welcome to JSCST E-Library</string>
    <string name="welcomemsg">Thank you for installing our application, Developed by Mohanad and Qasim</string>
    <string name="welcometoast">Default name has been created to change it please go to (change username)</string>
    <string name="welcom">Welcome</string>
    <string name="created">Developed by\nMohand - Qasim</string>
    <string name="search_first">Search first</string>
    <string name="version">Version 1.1.2 (28/7/2017)</string>
    <string name="fixes">- Notification fixes\n- New notification for all</string>
    <string name="snd">Send</string>
    <string name="dofanoti">Uni Notification</string>
    <string name="addnoti">Please add a notification</string>
    <string name="plzsndnoti">Preparing to send the notification</string>
    <string name="fldtosnd">Failed to send notification</string>
    <string name="notisndcmp">Notification send successfuly</string>
    <string name="fldtodeltempfile">Failed to delete temp file</string>
    <string name="sndfld">Send failed</string>
    <string name="errrnamenoti">Error in renaming file</string>
    <string name="filentfound">File not found</string>
    <string name="fldtochcknoti">Failed to check notification</string>
    <string name="save">Saved</string>
    <string name="notsave">Not saved</string>
    <string name="newuninoti">New notification</string>
    <string name="devby">Developed by Mohand and Qasim</string>
    <string name="choose_subject">Choose subject</string>
    <string name="fldtordfile">Failed to read file</string>
    <string name="delflddelmunal">File delete failed please delete manually</string>
    <string name="fldtodelnoti">Failed to delete notification, please delete manually</string>
    <string name="notidelsucced">Notification file deleted successfully</string>

</resources>
